# bank-logo-recognition

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  notes.txt
data/: img1_out_log.txt  img4_out_log.txt
doc/report-latex/: POBR_main.tex
doc/report-latex/tex/: 1-section.tex  10-section.tex  2-section.tex  3-section.tex  4-section.tex  5-section.tex  6-section.tex  7-section.tex  8-section.tex  9-section.tex
include/: LogoRecognizer.h  Segment.h
include/processing/: Binarization.h  ColorConverters.h  Consts.hpp  Filtering.h  Segmentation.h  Thresholding.h  Utils.hpp
src/: LogoRecognizer.cpp  Main.cpp  Segment.cpp  main.cpp
src/processing/: Binarization.cpp  ColorConverters.cpp  Filtering.cpp  Segmentation.cpp
